tests/snapshots/frontend_single_file_tests__hello_world.snap
---
source: tests/frontend_single_file_tests.rs
expression: result
---
Ok(
    Some(
        ModuleNode {
            span: (
                0,
                27,
            ),
            body: [
                DefinitionNode {
                    span: (
                        0,
                        27,
                    ),
                    name: IdentifierNode {
                        span: (
                            4,
                            14,
                        ),
                        name: "helloWorld",
                    },
                    kind: Expr(
                        ExprNode {
                            span: (
                                16,
                                27,
                            ),
                            kind: Literal(
                                LiteralNode {
                                    span: (
                                        16,
                                        27,
                                    ),
                                    kind: Str(
                                        "hello-world",
                                    ),
                                },
                            ),
                            inferred_type: String,
                        },
                    ),
                    inferred_type: String,
                },
            ],
        },
    ),
)
